tests/error/abstract_array.gw
#! [contains] must be declared empty
var Shred[12] shreds;
